--- a/assets/index_2.css
+++ b/assets/index_2.css
@@ -3,12 +3,21 @@ html,body,textarea,div{
     padding: 0;
     border: 0;
 }
+.dialog{
+    height: 500px;
+    border: 1px #000 solid;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 10px;
+    border-radius: 10px;
+}
 textarea{
     width: 90%;
     margin-left: 5%;
-    height: 300px;
+    height: 50px;
     border: 1px #000 solid;
     margin-top: 20px;
+    outline-style: none;
 }
 .submit{
     border: 1px #000 solid;
