--- a/assets/login.css
+++ b/assets/login.css
@@ -42,3 +42,92 @@ body{
     margin-top: 10%;
     position: relative;
 }
+.dialog{
+    padding-top: 10px;
+    height: 500px;
+    border: 1px #000 solid;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 10px;
+    border-radius: 10px;
+    font-size: 12px;
+    overflow-y: auto;
+}
+textarea{
+    width: 90%;
+    margin-left: 5%;
+    height: 50px;
+    border: 1px #000 solid;
+    margin-top: 20px;
+    outline-style: none;
+    font-size: 20px;
+}
+.submit_talk{
+    float: left;
+    border: 1px #000 solid;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: 30%;
+    margin-top: 20px;
+    margin-left: 15%;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+.logout{
+    float: right;
+    border: 1px #000 solid;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: 30%;
+    margin-top: 20px;
+    margin-right: 15%;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+.talkTime{
+    display: none;
+}
+.msgBox{
+    width: 100%;
+    height: auto;
+}
+.self{
+    float: right;
+    max-width: 70%;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #3BD4F4;
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 20px;
+    margin-right: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.other{
+    float: left;
+    max-width: 70%;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #AEDDE3;
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 20px;
+    margin-left: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+.robotMsg{
+    width: 80%;
+    text-align: center;
+    background-color: #ccc;
+    border-radius: 5px;
+    margin-left: 10%;
+    margin-top: 10px;
+
+}
