--- a/assets/login.css
+++ b/assets/login.css
@@ -53,7 +53,7 @@ body{
     font-size: 12px;
     overflow-y: auto;
 }
-textarea{
+#textarea{
     width: 90%;
     margin-left: 5%;
     height: 50px;
@@ -96,7 +96,7 @@ textarea{
 .self{
     float: right;
     max-width: 70%;
-    text-align: center;
+    text-align: left!important;
     border-radius: 5px;
     background-color: #3BD4F4;
     color: white;
@@ -106,11 +106,15 @@ textarea{
     margin-right: 15px;
     padding-left: 20px;
     padding-right: 20px;
+    white-space:normal;
+    height: auto;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 .other{
     float: left;
     max-width: 70%;
-    text-align: center;
+    text-align: left!important;
     border-radius: 5px;
     background-color: #AEDDE3;
     color: white;
@@ -120,6 +124,10 @@ textarea{
     margin-left: 15px;
     padding-left: 20px;
     padding-right: 20px;
+    white-space:normal;
+    height: auto;
+    word-break: break-all;
+    word-wrap: break-word;
 
 }
 .robotMsg{
